Update libraries for testing on Spark 2.4.8, drop some deprecated JRE options for test JRE, update scalatestplus import.